# SDL-OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Tetris/: Game.cpp  Game.h  Shader.cpp  Shader.h  Tetris.sln  Tetris.vcxproj  Tetris.vcxproj.filters  board.cpp  board.h  main.cpp  piece.h  pieces.cpp  pieces.h  renderer_geometry.cpp  renderer_sprite.cpp  renderer_sprite.h  resource_manager.cpp  resource_manager.h  scene.h  scene_game.cpp  scene_game.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp
Tetris/assets/shaders/: basique2D.frag  basique2D.vert  couleur2D.vert  couleur3D.frag  couleur3D.vert  rect.frag  rect.vert  texture.frag  texture.vert
assets/shaders/: rect.frag  sprite.frag  sprite.vert  test.frag  test.vert
ogl-tetris/: board.cpp  game.h  main.cpp  pieces.cpp  renderer_geometry.cpp  renderer_geometry.h  scene_game.cpp  scene_game.h  shader.cpp  texture.h
resources/: tile.pyxel  tile_fall.pyxel
scripts/: assets.bat  assets.sh  build.bat  build.sh  clean.bat  clean.sh  makefile  release.bat  release.sh
src/: board.h  game.cpp  game.h  main.cpp  piece.h  renderer_geometry.cpp  renderer_geometry.h  renderer_sprite.cpp  renderer_sprite.h  resource_manager.cpp  resource_manager.h  scene.h  scene_game.cpp  scene_game.h  shader.cpp  shader.h  texture.h
src/engine/: CMakeLists.txt  color.cpp  color.h  engine.cpp  engine.h  entity.cpp  entity.h  game.cpp  game.h  gamestate.h  gl_debug.hpp  igame.h  input_keyboard_state.cpp  input_keyboard_state.h  input_manager.cpp  input_manager.h  input_state.h  log.cpp  log.h  math.cpp  maths.cpp  maths.h  renderer_geometry.cpp  renderer_geometry.h  renderer_sprite.cpp  renderer_sprite.h  renderer_test.cpp  renderer_test.h  resource_manager.cpp  resource_manager.h  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  time.cpp  time.h  timer.cpp  timer.h  vertex_array.cpp  (+5 more)
src/game/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  gamestate_main.cpp  gamestate_main.h  piece.h  pieces.cpp  pieces.h  scene_game.cpp  scene_game.h
